using Fluid;

namespace Oak.I18n;

public static partial class S
{
    private static readonly IReadOnlyDictionary<string, IFluidTemplate> French = new Dictionary<string, IFluidTemplate>()
    {
        { Oak, Parser.Parse("<h1>Bonjour, Oak !</h1><p>Bienvenue dans votre nouveau kit de démarrage dotnet.</p><p>Vous trouverez :</p><ul><li>Client : une application blazor wasm utilisant bibliothèque radzen ui</li><li>Serveur : aspnet avec grpc api et interface de base de données du cadre d'entité</li></ul>")},
        { Invalid, Parser.Parse("Invalide") },
        { InvalidEmail, Parser.Parse("Email invalide") },
        { InvalidPwd, Parser.Parse("Mot de passe incorrect") },
        { LessThan8Chars, Parser.Parse("Moins de 8 caractères") },
        { NoLowerCaseChar, Parser.Parse("Pas de caractère minuscule") },
        { NoUpperCaseChar, Parser.Parse("Pas de caractère majuscule") },
        { NoDigit, Parser.Parse("Aucun chiffre") },
        { NoSpecialChar, Parser.Parse("Aucun caractère spécial") },
        { UnexpectedError, Parser.Parse("Une erreur inattendue est apparue") },
        { AlreadyAuthenticated, Parser.Parse("Déjà en session authentifiée") },
        { NoMatchingRecord, Parser.Parse("Aucun enregistrement correspondant") },
        { InvalidEmailCode, Parser.Parse("Code e-mail invalide") },
        { InvalidResetPwdCode, Parser.Parse("Code de mot de passe de réinitialisation invalide") },
        { AccountNotVerified, Parser.Parse("Compte non vérifié, veuillez vérifier vos e-mails pour le lien de vérification") },
        { AuthAttemptRateLimit, Parser.Parse("Les tentatives d'authentification ne peuvent pas être effectuées plus fréquemment que toutes les {{Seconds}} secondes") },
        { AuthConfirmEmailSubject, Parser.Parse("Confirmez votre adresse email")}, 
        { AuthConfirmEmailHtml, Parser.Parse("<div><a href=\"{{BaseHref}}/verify_email?email={{Email}}&code={{Code}}\">Veuillez cliquer sur ce lien pour vérifier votre adresse e-mail</a></div>")}, 
        { AuthConfirmEmailText, Parser.Parse("Veuillez utiliser ce lien pour vérifier votre adresse e-mail: {{BaseHref}}/verify_email?email={{Email}}&code={{Code}}")},
        { AuthResetPwdSubject, Parser.Parse("Réinitialiser le mot de passe")}, 
        { AuthResetPwdHtml, Parser.Parse("<div><a href=\"{{BaseHref}}/reset_pwd?email={{Email}}&code={{Code}}\">Veuillez cliquer sur ce lien pour réinitialiser votre mot de passe</a></div>")}, 
        { AuthResetPwdText, Parser.Parse("Veuillez cliquer sur ce lien pour réinitialiser votre mot de passe: {{BaseHref}}/reset_pwd?email={{Email}}&code={{Code}}")},
        { Home, Parser.Parse("Maison")},
        { L10n, Parser.Parse("Localisation")},
        { Language, Parser.Parse("Langue")},
        { DateFmt, Parser.Parse("Format de date")},
        { TimeFmt, Parser.Parse("Format de l'heure")},
        { Register, Parser.Parse("Enregistrer")},
        { Registering, Parser.Parse("Enregistrement")},
        { RegisterSuccess, Parser.Parse("Veuillez vérifier vos e-mails pour un lien de confirmation pour terminer l'inscription.")},
        { SignIn, Parser.Parse("S'identifier")},
        { RememberMe, Parser.Parse("Souviens-toi de moi")},
        { SigningIn, Parser.Parse("Connectez-vous")},
        { SignOut, Parser.Parse("Se déconnecter")},
        { SigningOut, Parser.Parse("Déconnecter")},
        { VerifyEmail, Parser.Parse("Vérifier les courriels")},
        { Verifying, Parser.Parse("Vérification")},
        { VerifyingEmail, Parser.Parse("Vérification de votre e-mail")},
        { VerifyEmailSuccess, Parser.Parse("Merci d'avoir vérifié votre adresse e-mail.")},
        { ResetPwd, Parser.Parse("Réinitialiser le mot de passe")},
        { Email, Parser.Parse("E-mail")},
        { Pwd, Parser.Parse("Mot de passe")},
        { ConfirmPwd, Parser.Parse("Confirmez le mot de passe")},
        { PwdsDontMatch, Parser.Parse("Les mots de passe ne correspondent pas")},
        { ResetPwdSuccess, Parser.Parse("Vous pouvez maintenant vous connecter avec votre nouveau mot de passe.")},
        { Resetting, Parser.Parse("Réinitialisation")},
        { SendResetPwdLink, Parser.Parse("Envoyer le lien de réinitialisation du mot de passe")},
        { SendResetPwdLinkSuccess, Parser.Parse("Si cet e-mail correspond à un compte, un e-mail vous aura été envoyé pour réinitialiser votre mot de passe.")},
        { Processing, Parser.Parse("Traitement")},
        { Send, Parser.Parse("Envoyer")},
        { Success, Parser.Parse("Succès")},
        { Error, Parser.Parse("Erreur")},
        { Update, Parser.Parse("Mise à jour")},
        { Updating, Parser.Parse("Mise à jour")}
    };
}