using Fluid;

namespace Oak.I18n;

public static partial class S
{
    private static readonly IReadOnlyDictionary<string, IFluidTemplate> Italian = new Dictionary<string, IFluidTemplate>()
    {
        { Oak, Parser.Parse("<h1>Ciao, Oak!</h1><p>Benvenuto nel tuo nuovo starter kit dotnet.</p><p>Troverai:</p><ul><li>Client: un'app blazor wasm che utilizza Libreria radzen ui</li><li>Server: aspnet con interfaccia grpc api e entità framework db</li></ul>")},
        { Invalid, Parser.Parse("Non valido") },
        { InvalidEmail, Parser.Parse("E-mail non valido") },
        { InvalidPwd, Parser.Parse("Password non valida") },
        { LessThan8Chars, Parser.Parse("Meno di 8 caratteri") },
        { NoLowerCaseChar, Parser.Parse("Nessun carattere minuscolo") },
        { NoUpperCaseChar, Parser.Parse("Nessun carattere maiuscolo") },
        { NoDigit, Parser.Parse("Nessuna cifra") },
        { NoSpecialChar, Parser.Parse("Nessun carattere speciale") },
        { UnexpectedError, Parser.Parse("Si è verificato un errore imprevisto") },
        { AlreadyAuthenticated, Parser.Parse("Già in sessione autenticata") },
        { NoMatchingRecord, Parser.Parse("Nessun record corrispondente") },
        { InvalidEmailCode, Parser.Parse("Codice e-mail non valido") },
        { InvalidResetPwdCode, Parser.Parse("Codice di reimpostazione della password non valido") },
        { AccountNotVerified, Parser.Parse("Account non verificato, controlla le tue e-mail per il link di verifica") },
        { AuthAttemptRateLimit, Parser.Parse("I tentativi di autenticazione non possono essere effettuati più frequentemente di ogni {{Seconds}} secondi") },
        { AuthConfirmEmailSubject, Parser.Parse("Conferma l'indirizzo e-mail")}, 
        { AuthConfirmEmailHtml, Parser.Parse("<div><a href=\"{{BaseHref}}/verify_email?email={{Email}}&code={{Code}}\">Fai clic su questo link per verificare il tuo indirizzo email</a></div>")}, 
        { AuthConfirmEmailText, Parser.Parse("Utilizza questo link per verificare il tuo indirizzo email: {{BaseHref}}/verify_email?email={{Email}}&code={{Code}}")},
        { AuthResetPwdSubject, Parser.Parse("Resetta la password")}, 
        { AuthResetPwdHtml, Parser.Parse("<div><a href=\"{{BaseHref}}/reset_pwd?email={{Email}}&code={{Code}}\">Fai clic su questo link per reimpostare la tua password</a></div>")}, 
        { AuthResetPwdText, Parser.Parse("Fai clic su questo link per reimpostare la tua password: {{BaseHref}}/reset_pwd?email={{Email}}&code={{Code}}")},
        { Home, Parser.Parse("Casa")},
        { L10n, Parser.Parse("Localizzazione")},
        { Language, Parser.Parse("Lingua")},
        { DateFmt, Parser.Parse("Formato data")},
        { TimeFmt, Parser.Parse("Formato orario")},
        { Register, Parser.Parse("Registrati")},
        { Registering, Parser.Parse("Registrazione")},
        { RegisterSuccess, Parser.Parse("Controlla le tue e-mail per un link di conferma per completare la registrazione.")},
        { SignIn, Parser.Parse("Registrazione")},
        { RememberMe, Parser.Parse("Ricordati di me")},
        { SigningIn, Parser.Parse("Registrarsi")},
        { SignOut, Parser.Parse("Disconnessione")},
        { SigningOut, Parser.Parse("Disconnessione")},
        { VerifyEmail, Parser.Parse("Verifica Email")},
        { Verifying, Parser.Parse("Verifica")},
        { VerifyingEmail, Parser.Parse("Verifica della tua email")},
        { VerifyEmailSuccess, Parser.Parse("Grazie per aver verificato la tua email.")},
        { ResetPwd, Parser.Parse("Resetta la password")},
        { Email, Parser.Parse("E-mail")},
        { Pwd, Parser.Parse("Parola d'ordine")},
        { ConfirmPwd, Parser.Parse("Conferma password")},
        { PwdsDontMatch, Parser.Parse("Le password non corrispondono")},
        { ResetPwdSuccess, Parser.Parse("Ora puoi accedere con la tua nuova password.")},
        { Resetting, Parser.Parse("Ripristino")},
        { SendResetPwdLink, Parser.Parse("Invia collegamento per reimpostare la password")},
        { SendResetPwdLinkSuccess, Parser.Parse("Se questa e-mail corrisponde a un account, sarà stata inviata un'e-mail per reimpostare la password.")},
        { Processing, Parser.Parse("in lavorazione")},
        { Send, Parser.Parse("Inviare")},
        { Success, Parser.Parse("Successo")},
        { Error, Parser.Parse("Errore")},
        { Update, Parser.Parse("Aggiornamento")},
        { Updating, Parser.Parse("In aggiornamento")}
    };
}